welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:8: error: not found: value Gauche
Gauche()
^Source:12: error: not found: value Gauche
Gauche()
^Source:16: error: not found: value Gauche
Gauche()
^