welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
gauche()
baisseBrosse()
avance()
avance()
avance()
avance()
Gauche()
avance()
avance()
avance()
Gauche()
avance()
avance()
avance()
Gauche()
avance()
